# deepl

./: deepl.py  pyproject.toml
